- add scrolling sideways to overflowing legend content on mobile - improve gfi ka-table styling - fix firefox bug where ka-table columns were too narrow

--- a/suomen-vaylat-app/src/custom.scss
+++ b/suomen-vaylat-app/src/custom.scss
@@ -30,7 +30,7 @@
     transition: opacity 300ms, transform 500ms;
 }
 
-@media only screen and (min-width: 425px) {
+
     /* width */
     ::-webkit-scrollbar {
         width: 8px;
@@ -60,4 +60,3 @@
     };
 
 
-};
